--- a/api/timetable-config.yml
+++ b/api/timetable-config.yml
@@ -6,5 +6,6 @@ output: ./internal/timetable-service/handler/timetableapi/timetableapi.gen.go
 output-options:
   include-tags:
     - Tasks
-    - Timetable
+    - Events
+    - Event
     - NotificationParams
