--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,23 +12,24 @@ services:
     volumes:
       - ./.docker/db:/var/lib/postgresql/data/
     ports:
-     - 5432:5432
+     - "5432:5432"
 
-  adminer:
-    image: adminer
+  service:
+    image: dyleme/schedudler
     restart: always
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file: .env
+    container_name: schedudler
     ports:
-      - 5000:8080
+      - "${APP_PORT}:${APP_PORT}"
+    depends_on:
+      - postgresql
 
-#  service:
-#    image: dyleme/notifier
+#  adminer:
+#    image: adminer
 #    restart: always
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    env_file: .env
-#    container_name: apod
 #    ports:
-#      - APP_PORT:${APP_PORT}
-#    depends_on:
-#      - postgresql
+#      - 5000:8080
+
