Redeploy by docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.3'
 services:
   postgresql:
     image: postgres:latest
-    restart: always
     container_name: postgers
+    restart: always
     env_file: .env
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
@@ -13,6 +13,20 @@ services:
       - ./.docker/db:/var/lib/postgresql/data/
     ports:
      - "5432:5432"
+
+  migrations:
+    image: dyleme/goose:latest
+    container_name: migrations
+    env_file: .env
+    environment:
+      - GOOSE_DRIVER=postgres
+      - GOOSE_DBSTRING=user=${POSTGRES_USER} database=${POSTGRES_DB} sslmode=${DB_SSL_MODE} password=${POSTGRES_PASSWORD} host=${DB_HOST}
+    volumes:
+      - ./migrations:/data
+    command: up
+    depends_on:
+      - postgresql
+
 
   service:
     image: dyleme/schedudler
@@ -26,6 +40,7 @@ services:
       - "${APP_PORT}:${APP_PORT}"
     depends_on:
       - postgresql
+      - migrations
 
 #  adminer:
 #    image: adminer
