Using inlines messages in events

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,6 +8,7 @@ sql:
           package: "queries"
           sql_package: "pgx/v5"
           out: "internal/authorization/repository/queries"
+          emit_db_tags: true
 
     - schema: "migrations"
       queries: "internal/timetable-service/repository/queries/sql"
@@ -17,6 +18,7 @@ sql:
           package: "queries"
           out: "internal/timetable-service/repository/queries"
           sql_package: "pgx/v5"
+          emit_db_tags: true
           overrides:
             - column: events.notification
               go_type:
