--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -20,11 +20,13 @@ sql:
           sql_package: "pgx/v5"
           emit_db_tags: true
           overrides:
-            - column: events.notification
+            - column: events.notification_params
+              nullable: true
               go_type:
                 import: "github.com/Dyleme/Notifier/internal/timetable-service/domains"
                 package: "domains"
-                type: Notification
+                type: NotificationParams
+                pointer: true
             - column: default_user_notification_params.params
               go_type:
                 import: "github.com/Dyleme/Notifier/internal/timetable-service/domains"
