--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -19,6 +19,7 @@ sql:
           out: "internal/service/repository/queries"
           sql_package: "pgx/v5"
           emit_db_tags: true
+          emit_methods_with_db_argument: true
           overrides:
             - column: events.notification_params
               nullable: true
