--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -21,7 +21,7 @@ sql:
           emit_db_tags: true
           emit_methods_with_db_argument: true
           overrides:
-            - column: events.notification_params
+            - column: basic_events.notification_params
               nullable: true
               go_type:
                 import: "github.com/Dyleme/Notifier/internal/domains"
