--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -40,3 +40,10 @@ sql:
                 import: "github.com/Dyleme/Notifier/internal/domains"
                 package: "domains"
                 type: NotificationParams
+            - column: notifications.notification_params
+              nullable: true
+              go_type:
+                import: "github.com/Dyleme/Notifier/internal/domains"
+                package: "domains"
+                type: NotificationParams
+                pointer: true
