--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,9 +5,9 @@ sql:
       engine: "postgresql"
       gen:
         go:
-          package: "queries"
+          package: "goqueries"
           sql_package: "pgx/v5"
-          out: "internal/authorization/repository/queries"
+          out: "internal/authorization/repository/queries/goqueries"
           emit_db_tags: true
 
     - schema: "migrations"
@@ -15,8 +15,8 @@ sql:
       engine: "postgresql"
       gen:
         go:
-          package: "queries"
-          out: "internal/service/repository/queries"
+          package: "goqueries"
+          out: "internal/service/repository/queries/goqueries"
           sql_package: "pgx/v5"
           emit_db_tags: true
           emit_methods_with_db_argument: true
