Add daily notifications

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -46,3 +46,4 @@ sql:
               import: "github.com/Dyleme/Notifier/internal/domains"
               package: "domains"
               type: NotificationParams
+              pointer: true
