--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -10,6 +10,12 @@ sql:
         sql_package: "pgx/v5"
         emit_db_tags: true
         emit_methods_with_db_argument: true
+        overrides:
+          - column: users.daily_notification_time
+            nullable: false
+            go_type: 
+              type: string
+              pointer: false
 
   - schema: "migrations"
     queries: "internal/service/repository/queries/sql"
@@ -28,14 +34,12 @@ sql:
               import: "github.com/Dyleme/Notifier/internal/domains"
               package: "domains"
               type: NotificationParams
-              pointer: true
           - column: periodic_tasks.notification_params
             nullable: true
             go_type:
               import: "github.com/Dyleme/Notifier/internal/domains"
               package: "domains"
               type: NotificationParams
-              pointer: true
           - column: default_user_notification_params.params
             go_type:
               import: "github.com/Dyleme/Notifier/internal/domains"
@@ -46,4 +50,3 @@ sql:
               import: "github.com/Dyleme/Notifier/internal/domains"
               package: "domains"
               type: NotificationParams
-              pointer: true
