--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   postgresql:
-    image: postgres:latest
+    image: postgres:16.6-alpine3.21 
     restart: always
     container_name: postgers
     env_file: .env
