--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,23 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
+    healthcheck:
+        test: ["CMD-SHELL", "pg_isready -U postgres"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+    command: >
+      postgres
+      -c shared_buffers=64MB
+      -c effective_cache_size=128MB
+      -c work_mem=4MB
+      -c maintenance_work_mem=32MB
+      -c max_connections=20
+      -c random_page_cost=1.1
+      -c checkpoint_completion_target=0.9
+      -c autovacuum=on
+      -c autovacuum_max_workers=1
+      -c logging_collector=off
     volumes:
       - ./.docker/db:/var/lib/postgresql/data/
     ports:
