--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,23 +1,6 @@
 version: "2"
 sql:
   - schema: "migrations"
-    queries: "internal/authorization/repository/queries/sql"
-    engine: "sqlite"
-    gen:
-      go:
-        package: "goqueries"
-        out: "internal/authorization/repository/queries/goqueries"
-        sql_package: "database/sql"
-        emit_db_tags: true
-        emit_methods_with_db_argument: true
-        overrides:
-          - column: users.daily_notification_time
-            nullable: false
-            go_type: 
-              type: string
-              pointer: false
-
-  - schema: "migrations"
     queries: "internal/service/repository/queries/sql"
     engine: "sqlite"
     gen:
@@ -27,22 +10,8 @@ sql:
         sql_package: "database/sql"
         emit_db_tags: true
         emit_methods_with_db_argument: true
-        overrides:
-          - column: single_tasks.notification_params
-            nullable: true
-            go_type:
-              type: "[]byte"
-          - column: periodic_tasks.notification_params
-            nullable: true
-            go_type:
-              type: "[]byte"
-          - column: default_user_notification_params.params
-            go_type:
-              type: "[]byte"
-          - column: events.notification_params
-            go_type:
-              type: "[]byte"
-          - column: key_value.value
-            nullable: false
-            go_type:
-              type: "[]byte"
+        # overrides:
+        #   - column: tasks.event_creation_params
+        #     nullable: true
+        #     go_type:
+        #       type: "[]byte"
