--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,3 +22,13 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+      
+    - name: Test migrations
+      env:
+        DB_PATH: './data/app.db'
+      run: |
+        go install github.com/pressly/goose/v3/cmd/goose@latest
+        mkdir -p data
+        goose -dir migrations sqlite3 "$DB_PATH" up
+
+
