--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,10 +46,23 @@ jobs:
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-          # Stop app without systemd
-          sudo pkill -f "myapp" || true
-          sleep 2
-          sudo pkill -9 -f "myapp" || true
+          set +e  # Don't fail on errors for stopping the app
+          
+          # Stop application gracefully
+          echo "Stopping application..."
+          if sudo pkill -f "myapp"; then
+              echo "Waiting for graceful shutdown..."
+              sleep 5
+          fi
+          
+          # Check if still running and force stop if needed
+          if pgrep -f "myapp" > /dev/null; then
+              echo "Force stopping application..."
+              sudo pkill -9 -f "myapp" || true
+              sleep 2
+          fi
+          
+          set -e  #
 
           # Create backup
           sudo mkdir -p /opt/myapp/{current,backup}
