--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Go Application
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main]
 
 jobs:
   deploy:
@@ -39,20 +39,23 @@ jobs:
         EOF
         chmod +x deployment/scripts/run_migrations.sh
 
-    - name: Create backup
+    - name: Deploy to server
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.SSH_HOST }}
         username: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        timeout: 5m
         script: |
+          # Stop and disable old service
+          sudo systemctl stop myapp || true
+          sudo systemctl disable myapp || true
+          
           # Create backup
           sudo mkdir -p /opt/myapp/{current,backup}
           sudo tar -czf /opt/myapp/backup/backup_$(date +%Y%m%d_%H%M%S).tar.gz /opt/myapp/current/ 2>/dev/null || true
           sudo rm -rf /opt/myapp/new
           sudo mkdir -p /opt/myapp/new
-
+          
     - name: Upload files
       uses: appleboy/scp-action@v0.1.7
       with:
@@ -62,8 +65,18 @@ jobs:
         source: "deployment/*"
         target: "/opt/myapp/new"
         strip_components: 1
+        
+    - name: Migrations
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+          export PATH=$PATH:~/go/bin
+          goose -dir /opt/myapp/current/migrations sqlite3 "/var/lib/myapp/app.db" up
 
-    - name: Setup and start application
+    - name: Setup
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.SSH_HOST }}
@@ -78,20 +91,29 @@ jobs:
           sudo chmod +x /opt/myapp/current/bin/myapp
           sudo chmod +x /opt/myapp/current/scripts/run_migrations.sh
           
-          # Run migrations
-          export PATH=$PATH:/home/${{ secrets.SSH_USER }}/go/bin
-          cd /opt/myapp/current
-          ./scripts/run_migrations.sh
+          # Create systemd service file
+          sudo tee /etc/systemd/system/myapp.service > /dev/null << EOF
+          [Unit]
+          Description=My Go Application
+          After=network.target
           
-          # Start application
-          cd /opt/myapp/current
-          nohup ./bin/myapp > /opt/myapp/logs/app.log 2> /opt/myapp/logs/error.log &
+          [Service]
+          Type=simple
+          User=${{ secrets.SSH_USER }}
+          WorkingDirectory=/opt/myapp/current
+          ExecStart=/opt/myapp/current/bin/myapp
+          Restart=always
+          RestartSec=10
+          Environment=PATH=/usr/local/go/bin:/home/${{ secrets.SSH_USER }}/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+          EnvironmentFile=/etc/notifier/.env
           
-          # Verify it's running
-          sleep 3
-          if pgrep -f "myapp" > /dev/null; then
-              echo "Application deployed and started successfully"
-          else
-              echo "Application may have failed to start. Check logs."
-              exit 1
-          fi
+          [Install]
+          WantedBy=multi-user.target
+          EOF
+
+          
+          # Enable and start service
+          sudo systemctl daemon-reload
+          sudo systemctl enable myapp
+          sudo systemctl start myapp
+          sudo systemctl status myapp --no-pager
